--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,8 @@
-/*toggle syling*/
+
+:root{
+    --primary-color: #0cce8d;
+    --secondary-color: rgba(197, 210, 210, 0.866);
+}
 
 .toggleInfo{
     display:flex;
@@ -43,11 +47,11 @@
 }
 
 input:checked + .slider {
-    background-color: #0cce8d;
+    background-color: var(--primary-color);
 }
 
 input:focus + .slider {
-    box-shadow: 0 0 1px #0cce8d;
+    box-shadow: 0 0 1px var(--primary-color);
 }
 
 input:checked + .slider:before {
@@ -74,8 +78,9 @@ html {
 }
 
 body {
-    background-color: rgba(197, 210, 210, 0.866);
+    background-color: var(--secondary-color);
 }
+
 .nav{
 position:relative;
 width:fit-content;
@@ -84,7 +89,7 @@ width:fit-content;
 #errorTip {
     position: absolute;
     top: -5px;
-    left: 160px;
+    left: 120px;
     margin: -10px;
     color: red;
     font-size: 12px;
@@ -95,7 +100,7 @@ width:fit-content;
     border: none;
     padding: 0.25rem;
     padding-left: 10px;
-    font-size: larger;
+    font-size: 1.02rem;
 }
 
 #submit {
@@ -119,8 +124,8 @@ width:fit-content;
 .main {
     display: grid;
     place-items: center;
-    height: 400px;
-    width: 500px;
+    height: 50%;
+    width: 55%;
     background-color: white;
     margin: 1rem;
     padding: 1em;
@@ -140,7 +145,7 @@ width:fit-content;
 
 .content {
     display: grid;
-    gap: 2rem;
+    gap: 1rem;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
     place-items: center;
@@ -152,13 +157,17 @@ width:fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     height: 50px;
+    background-color:var(--primary-color); 
+    padding: .25rem;
+    padding-bottom: .5rem;;
+    border-radius: .5rem;
 }
 
-.conditionDiv h3,
-.tempDiv h3,
-.windDiv h3 {
+.conditionDiv *,
+.tempDiv *,
+.windDiv * {
     margin: 0;
 }
 
@@ -176,4 +185,21 @@ width:fit-content;
     grid-area: 1/3/2/4;
     justify-self: center;
     white-space: nowrap;
+}
+
+
+@media only screen  and (max-width: 900px){
+    
+    .main{
+        height:55%;
+    }
+    .content{
+        grid-template-columns: 1fr;
+    }
+    .tempDiv{
+        grid-area: 2/1/3/2;
+    }
+    .windDiv{
+        grid-area: 3/1/4/2;
+    }
 }
