--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,7 @@ width:fit-content;
     font-size: 24px;
 }
 #submit:hover {
-    transform: scale(1.3);
+    transform: scale(1.2);
     cursor: pointer;
 }
 
@@ -125,7 +125,7 @@ width:fit-content;
     display: grid;
     place-items: center;
     height: 50%;
-    width: 55%;
+    width: 65%;
     background-color: white;
     margin: 1rem;
     padding: 1em;
@@ -157,11 +157,10 @@ width:fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    height: 50px;
+    justify-content: center;
+    height: 60px;
     background-color:var(--primary-color); 
-    padding: .25rem;
-    padding-bottom: .5rem;;
+    padding: .5rem;
     border-radius: .5rem;
 }
 
@@ -174,11 +173,13 @@ width:fit-content;
 .conditionDiv {
     grid-area: 1/1/2/2;
     justify-self: center;
+    white-space: nowrap;
 }
 
 .tempDiv {
     grid-area: 1/2/2/3;
     justify-self: center;
+    white-space: nowrap;
 }
 
 .windDiv {
@@ -191,7 +192,7 @@ width:fit-content;
 @media only screen  and (max-width: 900px){
     
     .main{
-        height:55%;
+        height:75%;
     }
     .content{
         grid-template-columns: 1fr;
