--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,12 @@
-
-:root{
+:root {
     --primary-color: #0cce8d;
     --secondary-color: rgba(197, 210, 210, 0.866);
 }
 
-.toggleInfo{
-    display:flex;
+.toggleInfo {
+    display: flex;
     gap: 2rem;
-   align-items: center;
+    align-items: center;
 }
 .switch {
     position: relative;
@@ -79,11 +78,12 @@ html {
 
 body {
     background-color: var(--secondary-color);
+    animation: fadeInAnimation ease 3s;
 }
 
-.nav{
-position:relative;
-width:fit-content;
+.nav {
+    position: relative;
+    width: fit-content;
 }
 
 #errorTip {
@@ -96,7 +96,7 @@ width:fit-content;
 }
 
 #searchQuery {
-    border-radius: 1rem;
+    border-radius: .5rem;
     border: none;
     padding: 0.25rem;
     padding-left: 10px;
@@ -125,7 +125,7 @@ width:fit-content;
     display: grid;
     place-items: center;
     height: 50%;
-    width: 65%;
+    width: 70%;
     background-color: white;
     margin: 1rem;
     padding: 1em;
@@ -139,7 +139,7 @@ width:fit-content;
     height: 60px;
 }
 
-.locationDiv > *{
+.locationDiv > * {
     margin: 0;
 }
 
@@ -159,9 +159,9 @@ width:fit-content;
     align-items: center;
     justify-content: center;
     height: 60px;
-    background-color:var(--primary-color); 
-    padding: .5rem;
-    border-radius: .5rem;
+    background-color: var(--primary-color);
+    padding: 0.5rem;
+    border-radius: 0.5rem;
 }
 
 .conditionDiv *,
@@ -188,19 +188,26 @@ width:fit-content;
     white-space: nowrap;
 }
 
-
-@media only screen  and (max-width: 900px){
-    
-    .main{
-        height:75%;
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
     }
-    .content{
+    100% {
+        opacity: 1;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .main {
+        height: 75%;
+    }
+    .content {
         grid-template-columns: 1fr;
     }
-    .tempDiv{
+    .tempDiv {
         grid-area: 2/1/3/2;
     }
-    .windDiv{
+    .windDiv {
         grid-area: 3/1/4/2;
     }
 }
